# e2e-tests

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Pipfile  README.md  conftest.py  discover-env-from-cluster.sh  docker-compose.yaml  entrypoint.sh  guidelines.md  pyproject.toml  pytest_retry.py  pytest_retry.sh  requirements.txt  tests.md  user_page.json
doc/: WEB_pages.drawio
docker/testing-api/: Dockerfile
docs/: README.md  code-structure.md  env-discovery.md  fixtures.md  playwright.md  pom-deployment.md  pom-email.md  pom-inheritance.md  pom.md  pytest.md  stub-data.md  technology.md  tests.md  upgrade-tests.md
helm/testing-api/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/testing-api/templates/: NOTES.txt  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
jobs/: e2e-tests.yaml
playwright_pages_base/: base.py
playwright_pages_ucs_portal/: exceptions.py  login_page.py
playwright_pages_ucs_portal/common/: cookie_dialog.py  header.py  notifications.py  portal_page.py  right_side_menu.py
playwright_pages_ucs_portal/home_page/: base.py  logged_in.py  logged_out.py
playwright_pages_ucs_portal/selfservice/: change_password.py
playwright_pages_ucs_portal/users/: users_page.py
src/: attrdict.py
src/api/: keycloak_api.py  maildev.py  udm_api.py
src/e2e/: ad_hoc.py  base.py  chaos.py  decorators.py  helm.py  keycloak.py  kubernetes.py  ldap.py  portal.py  provisioning.py  stack_data.py  types.py  ucr.py  udm.py  umc.py  util.py
src/e2e/api/: portal_server.py
src/e2e/chaos/: __init__.py
src/e2e/email/: password_reset.py
src/e2e/kubernetes/: __init__.py  port_forward.py  utils.py
src/pages/keycloak/: welcome_page.py
src/pages/keycloak/admin_console/: admin_console_home_page.py
src/pages/keycloak/admin_console/common/: admin_console_page.py  header.py
src/pages/portal/common/: portal_page.py  right_side_menu.py
src/pages/portal/home_page/: logged_out.py
src/pom/: base_page.py  home_user_page.py  login_page.py  main_page.py  manage_announcement_page.py  manage_users_page.py  page_menu.py  udm.py
src/udm_helpers/: user_args.py
src/umspages/common/: __init__.py  base.py
src/umspages/keycloak/: admin_login_page.py  login_page.py  on_block_page.py  welcome_page.py
src/umspages/keycloak/admin_console/: admin_console_home_page.py
src/umspages/keycloak/admin_console/common/: admin_console_page.py  header.py
src/umspages/portal/: admin_page.py  exceptions.py  login_page.py  main_page.py  umc_section.py
src/umspages/portal/announcements/: announcements_page.py
src/umspages/portal/common/: announcements.py  cookie_dialog.py  header.py  notifications.py  portal_page.py  right_side_menu.py
src/umspages/portal/groups/: groups_page.py
src/umspages/portal/guardian/: guardian_page.py
src/umspages/portal/home_page/: base.py  logged_in.py  logged_out.py
src/umspages/portal/selfservice/: base.py  change_password.py  logged_in.py  logged_out.py  manage_profile.py  password_forgotten.py  set_new_password.py  set_recovery_email.py
src/umspages/portal/users/: users_page.py
src/univention/admin/rest/client/: __init__.py
testing-api/: pyproject.toml
testing-api/src/testing_api/: config.py  helpers.py  ldap_replication.py  log.py  main.py  message_queue.py
tests/: conftest.py  test_debug.py  test_univentionObjectIdentifier.py
tests-chaos/ldap_chaos/: conftest.py  test_first_primary_fails.py  test_provisioning.py
tests-env-ready/: all_pods_ready.py  test_all_pods_ready.py
tests-ldap/: README.md  conftest.py  env_vars.py  test_first_primary_fails.py  test_ldap_ha.py  test_provisioning.py
tests-ldap/utils/: data_generators.py  k8s_helpers.py  ldap_helpers.py
tests/base/: test_service_accounts.py
tests/bfp/: README.md  conftest.py  test_block.py
tests/fixtures/: base.py  base_fixtures.py  bfp_fixtures.py  portal.py
tests/keycloak_bootstrap/: conftest.py  test_ldap_bind_pool_reuse.py  test_ldap_mappers.py
tests/lang/: de.py  en.py
tests/ldap_chaos/: conftest.py
tests/new/: test_announcements.py  test_cookies.py  test_login_page.py  test_main_page.py  test_page_menu.py  test_selfservice.py  test_users_page.py
tests/openDeskPlugins/: test_attribute_to_group_mapper.py
tests/opendesk_plugins/: test_attribute_to_group_mapper.py
tests/portal/: conftest.py  test_2fa.py  test_2fa_access.py  test_adhoc_provisioning.py  test_announcements.py  test_api_me.py  test_api_portal.py  test_branding_favicon.py  test_brute_force_protection.py  test_central_navigation.py  test_cookies.py  test_create_user_via_umc.py  test_guardian.py  test_i18n.py  test_keycloak_cache.py  test_keycloak_cookie_banner.py  test_keycloak_translations.py  test_login.py  test_login_page.py  test_logout.py  test_main_page.py  test_no_tile_icons_missing.py  test_notification.py  test_nubus_ready.py  test_oidc_claim.py  test_portal_layout.py  test_portal_links.py  test_self_service_rate_limit.py  test_selfservice.py  test_umc_groups.py  test_umc_tiles.py  test_univentionObjectIdentifier.py  test_update_portal.py  test_users_page.py
tests/portal/featureToggles/left_sidebar/: test_feature_toggle_left_sidebar.py  test_left_sidebar_accessibility.py
tests/portal/upgrade/: test_setup_2fa.py
tests/portal_extension/: test_portal_links.py  test_service_account.py
tests/portal_frontend/: test_portal_frontend_admin_page.py  test_portal_frontend_login_page.py  test_portal_frontend_login_saml_page.py  test_portal_frontend_main_page.py  test_portal_frontend_management_console_page.py
tests/scim/: scim_e2e_test.py
tests/screenshots/: conftest.py  test_nubus_manual.py  test_screenshot_portal.py
tests/udm-rest-api/: conftest.py  test_auth.py  test_license_cache.py  test_udm_and_provisioning.py
tests/upgrade/: test_setup_2fa.py
