[project]
name = "umspages"
version = "0.2.0"
description = "Page Objects used for end to end testing in the SouvAP Dev team"
maintainers = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "GNU Affero General Public License v3"}
readme = "README.md"
requires-python = ">=3.8,<4"

[project.optional-dependencies]
tests = [ "pytest-playwright==0.4.2", "requests==2.31.0", "url-normalize==1.4.3", "pytest-html==4.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/umspages"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
testpaths = [ "tests" ]
markers = [
    "saml: all tests that enforce SAML login. Other tests may also use SAML depending on the environment",
    "acceptance_environment: target openDesk acceptance-environments",
    "development_environment: target openDesk dev-env",
    "portal: tests for univention-portal",
    "selfservice: tests for updating profile, change recovery email, selfservice portal, etc.",
    "brute_force_protection: test standalone keycloak-extensions (no univention-portal)",
    "login: all tests related to login on univention-portal",
    "logout: all tests related to logout on univention-portal",
    "groups: Tests for the group management console for admin users",
    "users: tests for user management console for admin users",
    "notifications: tests related to univention-portal notifications",
    "announcements: tests related to univention-portal announcements",
    "i18n: univention-portal translations",
    "cookies: univention-portal cookies banner and others",
    "central_navigation: tests related to central navigation for the univention-portal"
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # activate isort

[tool.ruff.lint.isort]
known-first-party = ["umspages", "e2e", "udm_helpers", "api", "univention"]
known-local-folder = ["tests"]
