[project]
name = "umspages"
version = "0.2.0"
description = "Page Objects used for end to end testing in the SouvAP Dev team"
maintainers = [{ name = "Univention GmbH", email = "packages@univention.de" }]
license = { text = "GNU Affero General Public License v3" }
readme = "README.md"
requires-python = ">=3.12,<4"

[project.optional-dependencies]
tests = [
    "pytest-playwright==0.4.2",
    "requests==2.32.5",
    "url-normalize==1.4.3",
    "pytest-html==4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/umspages"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "acceptance_environment: target openDesk acceptance-environments",
    "announcements: tests related to univention-portal announcements",
    "brute_force_protection: test standalone keycloak-extensions (no univention-portal)",
    "central_navigation: tests related to central navigation for the univention-portal",
    "cookies: univention-portal cookies banner and others",
    "cookie_banner: Cookie banner related tests around Keycloak",
    "development_environment: target openDesk dev-env",
    "groups: Tests for the group management console for admin users",
    "i18n: univention-portal translations",
    "login: all tests related to login on univention-portal",
    "logout: all tests related to logout on univention-portal",
    "notifications: tests related to univention-portal notifications",
    "portal: tests for univention-portal",
    "saml: all tests that enforce SAML login. Other tests may also use SAML depending on the environment",
    "selfservice: tests for updating profile, change recovery email, selfservice portal, etc.",
    "screenshots: tests to automatically create screenshots",
    "users: tests for user management console for admin users",
    "feature_toggle: tests for the feature toggle",
    "feature_toggle_left_sidebar: tests for the left sidebar feature toggle",
]
filterwarnings = [
    # See https://github.com/cannatag/ldap3/issues/1159
    'ignore:typeMap is deprecated. Please use TYPE_MAP instead:DeprecationWarning',
    'ignore:tagMap is deprecated. Please use TAG_MAP instead:DeprecationWarning',
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"] # activate isort

[tool.ruff.lint.isort]
known-first-party = ["umspages", "e2e", "udm_helpers", "api", "univention"]
known-local-folder = ["tests"]
