# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-testing-api"
version = "0.1.0"
description = "Nubus testing api to support e2e tests"
maintainers = [{ name = "Univention GmbH", email = "packages@univention.de" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.1",
    "fastapi-utils>=0.7.0",
    "ldap3>=2.9.1",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "tenacity",
    "uvicorn>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
]

[project.scripts]
testing-api = "testing_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testing_api"]
